--- a/athletic-greatness/src/components/hero/hero.scss
+++ b/athletic-greatness/src/components/hero/hero.scss
@@ -3,6 +3,14 @@
     height: 100vh;
 }
 
+.line{
+    width: 100%;
+    height: 1px;
+    background-color: white;
+    position: absolute;
+    z-index: 99999;
+}
+
 .hero-image {
 
     .gradient {
@@ -16,7 +24,7 @@
 
     .background {
         width: 100%;
-        height: 992px;
+        height: 982px;
         object-fit: cover;
         object-position: 0% 35%;
     }
@@ -36,12 +44,12 @@
     .hero-content-subtitle{
         font-size: 2rem;
         font-weight: 400;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
     }
 
     .hero-content-button{
         font-size: 1.2rem;
-        padding: 10px 20px;
+        padding: 24px 40px;
         border: var(--primary-color) 2px solid;
         color: white;
         cursor: pointer;
