--- a/athletic-greatness/src/components/about/about.scss
+++ b/athletic-greatness/src/components/about/about.scss
@@ -1,8 +1,8 @@
 .about {
     width: 100%;
     height: 768px;
-    background-color: black;
-
+    background-color: #121212;
+    
     .about-container{
         display: flex;
         padding: 70px 0px 0px 100px;}
