--- a/athletic-greatness/src/components/contact/contact.scss
+++ b/athletic-greatness/src/components/contact/contact.scss
@@ -2,33 +2,25 @@
     background-color: #121212;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    height: 860px;
     font-family: 'Bebas Neue', sans-serif;
     color: white;
+    position: relative;
 }
 
 .contact-section {
+    position: relative;
+    z-index: 2;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #000;
-    border: 2px solid rgba(0, 123, 255, 0.5);
     border-radius: 10px;
     padding: 40px;
     margin: 20px;
-    position: relative;
     overflow: hidden;
     color: white;
-
-    &:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 0;
-        transform: skewY(-2deg);
-    }
 
     .contact-info {
         z-index: 1;
@@ -115,4 +107,10 @@
             padding-right: 0;
         }
     }
+}
+
+img.trapezoid {
+    position: absolute;
+    width: 1500px;
+    z-index: 1;
 }
